@@ -1,16 +1,63 @@
-FROM java:7
 
-ENV VERSION 1.0.3
+# ====================================================================== #
+# Android SDK Docker Image
+# ====================================================================== #
 
-ENV KOTLIN_COMPILER_URL https://github.com/JetBrains/kotlin/releases/download/v${VERSION}/kotlin-compiler-${VERSION}.zip
+# Base image
+# ---------------------------------------------------------------------- #
+FROM ubuntu:18.04
 
-#RUN apt-get udpate &&
-#    apt-get install -y &&
-#    apt-get clean && \
-#    rm -rf /var/lib/apt/lists/*
+# Author
+# ---------------------------------------------------------------------- #
+LABEL maintainer "android@bilue.com.au"
 
-RUN wget $KOTLIN_COMPILER_URL -O /tmp/a.zip && \
-    unzip /tmp/a.zip -d /opt && \
-    rm /tmp/a.zip
+# support multiarch: i386 architecture
+# install Java
+# install essential tools
+# install Qt
+RUN dpkg --add-architecture i386 && \
+    apt-get update -y && \
+    apt-get install -y libncurses5:i386 libc6:i386 libstdc++6:i386 lib32gcc1 lib32ncurses5 lib32z1 zlib1g:i386 && \
+    apt-get install -y --no-install-recommends openjdk-8-jdk && \
+    apt-get install -y git wget zip && \
+    apt-get install -y curl && \
+    apt-get install -y make
 
-ENV PATH $PATH:/opt/kotlinc/bin
+# update ruby
+RUN wget -O ruby-install-0.7.0.tar.gz https://github.com/postmodern/ruby-install/archive/v0.7.0.tar.gz
+RUN tar -xzvf ruby-install-0.7.0.tar.gz
+RUN make -C /ruby-install-0.7.0/ install
+RUN ruby-install ruby 2.6.5
+ENV RUBY_HOME /opt/rubies/ruby-2.6.5
+ENV PATH ${PATH}:${RUBY_HOME}/bin
+
+RUN gem install fastlane -NV --no-document
+RUN gem install bundler
+
+# download and install Android SDK
+ARG ANDROID_SDK_VERSION=6200805
+ENV ANDROID_HOME /opt/android-sdk
+RUN mkdir -p ${ANDROID_HOME}/cmdline-tools && \
+    wget -q https://dl.google.com/android/repository/commandlinetools-linux-${ANDROID_SDK_VERSION}_latest.zip && \
+    unzip *tools*linux*.zip -d ${ANDROID_HOME}/cmdline-tools && \
+    rm *tools*linux*.zip
+
+# set the environment variables
+ENV JAVA_HOME /usr/lib/jvm/java-8-openjdk-amd64
+ENV PATH ${PATH}:${GRADLE_HOME}/bin:${KOTLIN_HOME}/bin:${ANDROID_HOME}/emulator:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools:${ANDROID_HOME}/tools/bin
+ENV _JAVA_OPTIONS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
+
+# Sets UTF-8 english as the default locale -- necessary for some Java processor in Android (jetifier for example)
+RUN apt-get install -y locales
+RUN locale-gen en_US.UTF-8
+
+ENV LC_ALL=en_US.UTF-8
+ENV LANG=en_US.UTF-8
+
+# accept the license agreements of the SDK components
+ADD license_accepter.sh /opt/
+RUN chmod 771 /opt/license_accepter.sh \
+&& /opt/license_accepter.sh $ANDROID_HOME
+
+# install sudo
+RUN apt-get update -y && apt-get install -y sudo
